--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -1,32 +1,25 @@
-# image will be published to ghcr.io/<user>/<name>
 name: kessoku
-# description will be included in the image's metadata
 description: This is my personal OS image.
 
-# the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-main
-image-version: 40 # latest is also supported if you want new updates ASAP
+base-image: ghcr.io/ublue-os/base-main
+image-version: latest
 
-# module configuration, executed in order
-# you can include multiple instances of the same module
 modules:
+  - from-file: steam-packages.yml
+  - from-file: hyprland-packages.yml
+  - from-file: common-packages.yml
+  - from-file: jp-packages.yml
+  - type: fonts
+    fonts:
+      nerd-fonts:
+        - Hack
+        - FiraCode
   - type: files
     files:
       - usr: /usr # copies config/files/usr into your image's /usr.
                   # put configuration files you want in /etc/ on a booted system 
                   # in /usr/etc/ in the image. read more in files module reference.
 
-  - type: rpm-ostree
-    repos:
-      # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
-    install:
-      # - micro
-      # - starship
-    remove:
-      # example: removing firefox (in favor of the flatpak)
-      # "firefox" is the main package, "firefox-langpacks" is a dependency
-      # - firefox
-      # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
@@ -45,5 +38,5 @@ modules:
       remove:
       # - org.gnome.eog
 
-  - type: signing # this sets up the proper policy & signing files for signed images to work fully
+  - type: signing
 
