--- a/recipes/hyprland-packages.yml
+++ b/recipes/hyprland-packages.yml
@@ -1,6 +1,7 @@
 type: rpm-ostree
 repos:
   - https://copr.fedorainfracloud.org/coprs/solopasha/hyprland/repo/fedora-%OS_VERSION%/solopasha-hyprland-fedora-%OS_VERSION%.repo
+  - https://copr.fedorainfracloud.org/coprs/ryanabx/cosmic-epoch/repo/fedora-%OS_VERSION%/ryanabx-cosmic-epoch-fedora-%OS_VERSION%.repo
 install:
   - hyprland
   - hyprpaper
@@ -10,3 +11,7 @@ install:
   - waybar
   - dunst
   - wlogout
+
+  # 'DE' stuff
+  - cosmic-files
+  - cosmic-applets
