--- a/recipes/hyprland-packages.yml
+++ b/recipes/hyprland-packages.yml
@@ -1,7 +1,6 @@
 type: rpm-ostree
 repos:
   - https://copr.fedorainfracloud.org/coprs/solopasha/hyprland/repo/fedora-%OS_VERSION%/solopasha-hyprland-fedora-%OS_VERSION%.repo
-  - https://copr.fedorainfracloud.org/coprs/ryanabx/cosmic-epoch/repo/fedora-%OS_VERSION%/ryanabx-cosmic-epoch-fedora-%OS_VERSION%.repo
 install:
   - hyprland
   - hyprpaper
@@ -14,5 +13,4 @@ install:
   - wlogout
 
   # 'DE' stuff
-  - cosmic-files
-  - cosmic-applets
+  - thunar
