Remove gamescope-session, add pamixer pystray tkinter

--- a/recipes/common-packages.yml
+++ b/recipes/common-packages.yml
@@ -31,10 +31,15 @@ install:
   - imv
   - zathura
   - zathura-pdf-mupdf
+
+  # Jellyfin-shim-mpv weak dependencies
+  - python3-pystray
+  - python3-tkinter
   
   # Audio
   - easyeffects
   - pipewire
   - wireplumber
+  - pamixer
 
   
