--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -21,6 +21,6 @@ modules:
   - type: script
     scripts:
       - remove_annoying_justfile_generator.sh
-  # - type: default-flatpaks # set up flathub
-  #   system:
+  - type: default-flatpaks # set up flathub
+    system:
   - type: signing
