--- a/config/files/usr/etc/systemd/user/waybar.service
+++ b/config/files/usr/etc/systemd/user/waybar.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Waybar
-PartOf=graphical-session.service
+After=graphical-session.service
 
 [Service]
 ExecStart=/usr/bin/waybar
