--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -10,6 +10,7 @@ modules:
   - from-file: hyprland-packages.yml
   - from-file: common-packages.yml
   - from-file: jp-packages.yml
+  - from-file: cosmic-packages.yml
   - type: fonts
     fonts:
       nerd-fonts:
