Move to river, hyper has weird dual monitor bug

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -7,7 +7,8 @@ image-version: latest
 modules:
   - from-file: podman.yml
   - from-file: steam-packages.yml
-  - from-file: hyprland-packages.yml
+  # - from-file: hyprland-packages.yml
+  - from-file: river-packages.yml
   - from-file: common-packages.yml
   - from-file: jp-packages.yml
   - from-file: cosmic-packages.yml
