--- a/recipes/cosmic-packages.yml
+++ b/recipes/cosmic-packages.yml
@@ -2,4 +2,5 @@ type: rpm-ostree
 repos:
   - https://copr.fedorainfracloud.org/coprs/ryanabx/cosmic-epoch/repo/fedora-%OS_VERSION%/ryanabx-cosmic-epoch-fedora-%OS_VERSION%.repo
 install:
-  - cosmic-files
+  - cosmic-desktop
+  # - cosmic-files
