Cosmic not usable yet (imo), try hyprland git and see if monitor bug is fixed

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -7,11 +7,11 @@ image-version: latest
 modules:
   - from-file: podman.yml
   - from-file: steam-packages.yml
-  # - from-file: hyprland-packages.yml
+  - from-file: hyprland-packages.yml
   - from-file: river-packages.yml
   - from-file: common-packages.yml
   - from-file: jp-packages.yml
-  - from-file: cosmic-packages.yml
+  # - from-file: cosmic-packages.yml
   - type: fonts
     fonts:
       nerd-fonts:
