--- a/recipes/hyprland-packages.yml
+++ b/recipes/hyprland-packages.yml
@@ -2,7 +2,7 @@ type: rpm-ostree
 repos:
   - https://copr.fedorainfracloud.org/coprs/solopasha/hyprland/repo/fedora-%OS_VERSION%/solopasha-hyprland-fedora-%OS_VERSION%.repo
 install:
-  - hyprland
+  - hyprland-git
   - hyprpaper
   - grimblast
   - xdg-desktop-portal-hyprland
