--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -2,7 +2,7 @@ name: kessoku
 description: This is my personal OS image.
 
 # base-image: ghcr.io/ublue-os/base-main
-base-image: ghcr.io/ublue-os/bazzite
+base-image: ghcr.io/ublue-os/bazzite-deck
 image-version: latest
 
 modules:
