KDE experiment failed

--- a/recipes/common-packages.yml
+++ b/recipes/common-packages.yml
@@ -1,7 +1,7 @@
 type: rpm-ostree
 install:
   # Launcher
-  # - rofi-wayland
+  - rofi-wayland
 
   - alacritty
   # CLI
@@ -23,10 +23,10 @@ install:
   # div
   - syncthing
   - wf-recorder
-  # - lxpolkit
-  # - xdg-user-dirs
+  - lxpolkit
+  - xdg-user-dirs
 
-  # - wl-clipboard
+  - wl-clipboard
 
   - grim
   - slurp
@@ -49,8 +49,8 @@ install:
   
   # Audio
   - easyeffects
-  # - pipewire
-  # - wireplumber
+  - pipewire
+  - wireplumber
   - pamixer
 
   
