--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -1,18 +1,17 @@
 name: kessoku
 description: This is my personal OS image.
 
-# base-image: ghcr.io/ublue-os/base-main
-base-image: ghcr.io/ublue-os/bazzite
+base-image: ghcr.io/ublue-os/base-main
 image-version: latest
 
 modules:
   - from-file: podman.yml
-  # - from-file: steam-packages.yml
-  # - from-file: hyprland-packages.yml
+  - from-file: steam-packages.yml
+  - from-file: hyprland-packages.yml
   # - from-file: river-packages.yml
   - from-file: common-packages.yml
   - from-file: jp-packages.yml
-  - from-file: bazzite.yml
+  # - from-file: bazzite.yml
   # - from-file: cosmic-packages.yml
   - type: fonts
     fonts:
@@ -26,12 +25,12 @@ modules:
   - type: script
     scripts:
       - remove_annoying_justfile_generator.sh
-  # - type: rpm-ostree
-  #   remove:
-  #     - firefox
-  #     - firefox-langpacks
-  # - type: default-flatpaks # set up flathub
-  #   system:
-  #     install:
-  #       - org.mozilla.firefox
+  - type: rpm-ostree
+    remove:
+      - firefox
+      - firefox-langpacks
+  - type: default-flatpaks # set up flathub
+    system:
+      install:
+        - org.mozilla.firefox
   - type: signing
