--- a/recipes/podman.yml
+++ b/recipes/podman.yml
@@ -3,3 +3,7 @@ replace:
   - from-repo: https://copr.fedorainfracloud.org/coprs/rhcontainerbot/podman-next/repo/fedora-%OS_VERSION%/rhcontainerbot-podman-next-fedora-%OS_VERSION%.repo
     packages:
       - podman
+repos:
+  - https://copr.fedorainfracloud.org/coprs/ublue-os/staging/repo/fedora-%OS_VERSION%/ublue-os-staging-fedora-%OS_VERSION%.repo
+install:
+  - devpod
